tests/NormalTests/paczka1/fuzzy1/30072672.err
Error in line 6: G8pPBc93 A320 21,1
Error in line 14: q1LkK S597 90,9
Error in line 28: rw9peJMv S378 33	1
Error in line 30: kE55kXlq S597 58,7
Error in line 27: rw9peJMv S87 15,7
Error in line 19: S378 A320 54,3
